<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Home"
    android:background="@color/background"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/Filter_icon"
            android:src="@drawable/filter"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/noFilter"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:background="@drawable/light_grey_bar_selected"
            android:text="@string/No_filter"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="3dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginEnd="9dp"/>

        <TextView
            android:id="@+id/high_low"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:background="@drawable/light_grey_bar"
            android:text="@string/High_low"
            android:textSize="12sp"
            android:padding="3dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginEnd="9dp"/>
        <TextView
            android:id="@+id/low_high"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:background="@drawable/light_grey_bar"
            android:text="@string/Low_high"
            android:textSize="12sp"
            android:padding="3dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

</LinearLayout>