<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/background">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Notes"
                android:gravity="top"
                android:background="@drawable/search_bar"
                android:textStyle="bold"
                android:padding="10dp"
                android:inputType="none"
                android:hint="@string/Search"
                android:textColorHint="@color/grey"
                android:layout_marginStart="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:contentDescription="@string/Filter_icon"
                            android:src="@drawable/filter"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/noFilter"
                            android:layout_width="80dp"
                            android:layout_height="25dp"
                            android:background="@drawable/light_grey_bar_selected"
                            android:text="@string/No_filter"
                            android:layout_gravity="center"
                            android:textSize="12sp"
                            android:padding="3dp"
                            android:textColor="@color/grey"
                            android:gravity="center"
                            android:layout_marginEnd="9dp"/>

                        <TextView
                            android:id="@+id/high_low"
                            android:layout_width="80dp"
                            android:layout_height="25dp"
                            android:background="@drawable/light_grey_bar"
                            android:text="@string/High_low"
                            android:textSize="12sp"
                            android:padding="3dp"
                            android:textColor="@color/grey"
                            android:gravity="center"
                            android:layout_marginEnd="9dp"/>
                        <TextView
                            android:id="@+id/low_high"
                            android:layout_width="80dp"
                            android:layout_height="25dp"
                            android:background="@drawable/light_grey_bar"
                            android:text="@string/Low_high"
                            android:textSize="12sp"
                            android:padding="3dp"
                            android:textColor="@color/grey"
                            android:gravity="center"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:paddingEnd="25dp"
                android:paddingTop="15dp"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>


</androidx.core.widget.NestedScrollView>


    <!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:id="@+id/drawerLayout"-->
<!--    android:orientation="vertical"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Activities.MainActivity"-->
<!--    tools:openDrawer="start"-->
<!--    android:background="@color/background">-->

<!--    <include layout="@layout/tool_bar"/>-->



<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/navigationLayout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        android:background="@color/background"-->
<!--        android:fitsSystemWindows="true"-->
<!--        app:headerLayout="@layout/header"-->
<!--        app:menu="@menu/menu_nav"-->
<!--        app:itemTextColor="@color/nav_item_text_color"-->
<!--        app:itemIconTint="@color/nav_item_text_color">-->

<!--    </com.google.android.material.navigation.NavigationView>-->

<!--</androidx.drawerlayout.widget.DrawerLayout>-->

