<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".Activities.AddNewActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="10dp"
        tools:context=".Activities.AddNewActivity">


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/UPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/black"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/black_circle"
                android:layout_marginEnd="15dp"/>

            <ImageView
                android:id="@+id/grey"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/grey_circle"
                android:layout_marginEnd="15dp"/>

            <ImageView
                android:id="@+id/white"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/white_circle"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/deleteBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/delete" />

            <ImageView
                android:id="@+id/UpdateBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/save" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/new_page">


            <EditText
                android:id="@+id/UpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:background="@null"
                android:textStyle="bold"
                android:textColorHint="@color/grey"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/UpDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/description"
                android:background="@null"
                android:textStyle="normal"
                android:textColorHint="@color/grey"
                android:padding="10dp"/>
            

        </LinearLayout>

    </LinearLayout>

</ScrollView>